# hyprland-plugins

./: .gitmodules  CMakeLists.txt  README.md  flake.nix
hyprselect/: CMakeLists.txt  Makefile  README.md  default.nix  main.cpp  meson.build
